adding calculator-size

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
       color: white;
       font-weight: bold;
     }
+    .text{
+        font-size: 50px;
+        color: red;
+        margin-left: 530px;
+    }
 
   </style>
 
@@ -91,11 +96,7 @@
 </head>
 
 <body>
-  <h1> &nbsp
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    &nbsp
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp calculator </h1>
+  <h1 class="text">Calculator </h1>
 
   <div class="calculator-container">
     <span class="brand">CASIO</span>
